--- a/Amazon-Meta Information.ipynb
+++ b/Amazon-Meta Information.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#Spark Code ~ Loading & Processing\n",
+    "from pyspark import SparkContext\n",
+    "from pyspark import SparkConf\n",
+    "\n",
+    "# create Spark context with Spark configuration\n",
+    "conf = SparkConf().setAppName(\"read text file in pyspark\")\n",
+    "sc = SparkContext(conf=conf)\n",
+    "\n",
+    "# Read amazon meta file into RDD\n",
+    "lines = sc.textFile(\"amazon-meta.txt\")\n",
+    "\n",
+    "# Call collect() to get all data\n",
+    "llist = lines.collect()\n",
+    "\n",
+    "# print line one by line\n",
+    "#for line in llist:\n",
+    "    #Create the metadata dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
@@ -667,35 +690,6 @@
     "for asin in nx.nodes(G1):\n",
     "    Books[asin]['Degree'] = int(degree[asin])\n",
     "print(nx.info(G1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#Spark Code ~ Loading & Processing"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from pyspark import SparkContext\n",
-    "from pyspark import SparkConf\n",
-    "\n",
-    "# create Spark context with Spark configuration\n",
-    "conf = SparkConf().setAppName(\"read text file in pyspark\")\n",
-    "sc = SparkContext(conf=conf)\n",
-    "\n",
-    "# Read amazon meta file into RDD\n",
-    "lines = sc.textFile(\"amazon-meta.txt\")\n",
-    "\n",
-    "# Call collect() to get all data\n",
-    "llist = lines.collect()\n",
-    "\n",
-    "# print line one by line\n",
-    "#for line in llist:\n",
-    "    #Create the metadata dictionary."
    ]
   }
  ],
