--- a/Amazon-Meta Information.ipynb
+++ b/Amazon-Meta Information.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#Spark Code ~ Loading & Processing\n",
+    "Data SNAP for quick reference:\n",
+    "\n",
+    "Id:   15\n",
+    "ASIN: 1559362022\n",
+    "  title: Wake Up and Smell the Coffee\n",
+    "  group: Book\n",
+    "  salesrank: 518927\n",
+    "  similar: 5  1559360968  1559361247  1559360828  1559361018  0743214552\n",
+    "  categories: 3\n",
+    "   |Books[283155]|Subjects[1000]|Literature & Fiction[17]|Drama[2159]|United States[2160]\n",
+    "   |Books[283155]|Subjects[1000]|Arts & Photography[1]|Performing Arts[521000]|Theater[2154]|General[2218]\n",
+    "   |Books[283155]|Subjects[1000]|Literature & Fiction[17]|Authors, A-Z[70021]|( B )[70023]|Bogosian, Eric[70116]\n",
+    "  reviews: total: 8  downloaded: 8  avg rating: 4\n",
+    "    2002-5-13  cutomer: A2IGOA66Y6O8TQ  rating: 5  votes:   3  helpful:   2\n",
+    "    2002-6-17  cutomer: A2OIN4AUH84KNE  rating: 5  votes:   2  helpful:   1\n",
+    "    2003-1-2  cutomer: A2HN382JNT1CIU  rating: 1  votes:   6  helpful:   1\n",
+    "    2003-6-7  cutomer: A2FDJ79LDU4O18  rating: 4  votes:   1  helpful:   1\n",
+    "    2003-6-27  cutomer: A39QMV9ZKRJXO5  rating: 4  votes:   1  helpful:   1\n",
+    "    2004-2-17  cutomer:  AUUVMSTQ1TXDI  rating: 1  votes:   2  helpful:   0\n",
+    "    2004-2-24  cutomer: A2C5K0QTLL9UAT  rating: 5  votes:   2  helpful:   2\n",
+    "    2004-10-13  cutomer:  A5XYF0Z3UH4HB  rating: 5  votes:   1  helpful:   1"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Spark Code ~ Loading & Processing\n",
     "from pyspark import SparkContext\n",
     "from pyspark import SparkConf\n",
     "\n",
